--- a/JspDemo/.gitignore
+++ b/JspDemo/.gitignore
@@ -126,4 +126,4 @@ Temporary Items
 # iCloud generated files
 *.icloud
 
-# End of https://www.toptal.com/developers/gitignore/api/macos,java,eclipse
+# Another End of https://www.toptal.com/developers/gitignore/api/macos,java,eclipse
